# Energy-Expenditure-Estimation

./: .gitignore  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml  run.py
src/: config.py  dataset.py  featuresD.py  plots.py
src/data/: MET_GT.py  activity.py  earbuds_imu.py  zephyr.py
src/features/: fusion.py  imu_features.py  windowing.py  zephyr_vo2_features.py
src/modeling/: predict.py  train.py
src/pipeline/: MET_GT_pipeline.py  earbuds_imu_pipeline.py  main.py  zephyr_pipeline.py
