[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "energy_expenditure_estimation"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Rameez Ali" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.9"


[tool.ruff]
line-length = 99
src = ["energy_expenditure_estimation"]
include = ["pyproject.toml", "energy_expenditure_estimation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["energy_expenditure_estimation"]
force-sort-within-sections = true

